# streamll

./: .gitignore  CLAUDE.md  JIRA.md  Makefile  README.md  STREAMLL_SIMPLIFICATION_ROADMAP.md  events.jsonl  pyproject.toml
.github/: docker-compose.test.yml
.github/workflows/: publish.yml  test.yml
demos/streamll-rag-local/: README.md  docker-compose.yml  init-db.sql  pyproject.toml  verify_demo.py
demos/streamll-rag-local/data/: dspy_integration.md  production_patterns.md  streamll_overview.md
demos/streamll-rag-local/src/: index.py  rag.py
docs/: custom-events.md  integration-testing-blueprint.md  production-wireframe.md  quickstart.md  rabbitmq-performance-guide.md  token-streaming.md  usage_examples.md
docs/api/: decorator.md
docs/examples/: basic-dspy.md  rag-pipeline.md  sink-selection.md  streaming.md
docs/production/: kafka-sink.md  redis-sink.md  sink-comparison-guide.md  streaming-options.md
examples/: README.md  basic.py  consumer.py  consumer_demo.py  custom_sink.py  events.jsonl  production.py  production_redis.py  quickstart.py  rabbitmq_consumer.py  rabbitmq_producer.py  trace_inside_forward.py  trace_usage_patterns.py
scripts/: test-env.sh
src/streamll/: __init__.py  brokers.py  context.py  decorator.py  dspy_callback.py  event_consumer.py  models.py  rabbitmq_consumer.py  redis_consumer.py  streaming.py
src/streamll/consumer/: __init__.py  base.py  rabbitmq.py  redis.py
src/streamll/sinks/: __init__.py  base.py  kafka.py  rabbitmq.py  redis.py  terminal.py
src/streamll/utils/: __init__.py  circuit_breaker.py  version_tracker.py
tests/: README.md  __init__.py  conftest.py  docker-compose.yml  test_brokers.py  test_conversation_context.py  test_decorator.py  test_examples.py  test_faststream_integration.py  test_helpers.py  test_integration_with_services.py  test_models.py  test_redis_sink.py  test_sinks.py  test_streamll_core.py  test_token_streaming_integration.py  test_trace_context.py
tests/fixtures/: __init__.py  infrastructure.py  kafka.py  mock_dspy.py  redis.py
tests/integration/: __init__.py  conftest.py  test_full_pipeline.py  test_rabbitmq.py  test_rabbitmq_sink.py  test_real_llm_streaming.py  test_redis.py  test_redis_sink.py
tests/smoke/: test_basic_usage.py
tests/unit/: test_context.py  test_core.py  test_decorator.py  test_models.py  test_sinks.py  test_streaming.py  test_terminal_sink.py
