[project]
name = "streamll"
version = "0.2.0-dev"
description = "Stream your DSPy application's inner-workings back to users in real-time"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "nanoid>=2.0",
    "dspy>=2.7.0",
    "aio-pika>=9.0.0",
    "pika>=1.3.0",
    "redis>=6.4.0",
]
authors = [{ name = "Nick Glasson" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
keywords = ["dspy", "streaming", "llm", "observability", "ai"]

[project.urls]
Homepage = "https://github.com/glssn/streamll"
Repository = "https://github.com/glssn/streamll"
Issues = "https://github.com/glssn/streamll/issues"

[project.optional-dependencies]
redis = [
    "redis>=6.4.0",
]

[dependency-groups]
dev = [
  "pytest>=7.4",
  "pytest-asyncio>=0.21",
  "pytest-cov>=4.1",
  "pytest-timeout>=2.1",
  "pytest-mock>=3.11",
  "ruff>=0.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = """
    -ra
    --strict-markers
    --cov=src/streamll
    --cov-report=term-missing
    --cov-report=html
"""
markers = [
  "integration: marks tests as integration tests (require real infrastructure)",
]
filterwarnings = [
  # Ignore litellm's Pydantic deprecation warnings
  "ignore:Accessing the 'model_fields' attribute:DeprecationWarning:litellm",
  # Ignore Pydantic serialization warnings for streaming responses
  "ignore:Pydantic serializer warnings::pydantic",
  # Ignore httpx content warning
  "ignore:Use 'content=<...>' to upload:DeprecationWarning:httpx",
]

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"] # Allow assert in tests
